backend.log
/Users/huunghiakhach/miniconda3/envs/face_attendance/lib/python3.11/site-packages/face_recognition_models/__init__.py:7: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.
  from pkg_resources import resource_filename
/Users/huunghiakhach/Documents/Face_roll_call/main.py:28: DeprecationWarning: 
        on_event is deprecated, use lifespan event handlers instead.

        Read more about it in the
        [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
        
  @app.on_event("startup")
INFO:     Started server process [86339]
INFO:     Waiting for application startup.
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)
INFO:     127.0.0.1:64422 - "GET / HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:65484 - "POST /api/register HTTP/1.1" 200 OK
INFO:     127.0.0.1:65491 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:65492 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:65495 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:65498 - "GET /api/attendance HTTP/1.1" 200 OK
Traceback (most recent call last):
  File "/Users/huunghiakhach/Documents/Face_roll_call/face_recognition_service.py", line 51, in encode_face_from_image
    image = cv2.imdecode(nparr, cv2.IMREAD_COLOR)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
cv2.error: OpenCV(4.8.1) /Users/xperience/GHA-OpenCV-Python/_work/opencv-python/opencv-python/opencv/modules/imgcodecs/src/loadsave.cpp:802: error: (-215:Assertion failed) !buf.empty() in function 'imdecode_'

Error encoding face: OpenCV(4.8.1) /Users/xperience/GHA-OpenCV-Python/_work/opencv-python/opencv-python/opencv/modules/imgcodecs/src/loadsave.cpp:802: error: (-215:Assertion failed) !buf.empty() in function 'imdecode_'

INFO:     127.0.0.1:65504 - "POST /api/check-in HTTP/1.1" 404 Not Found
Found 1 face(s) in image
INFO:     127.0.0.1:49565 - "POST /api/check-in HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:49626 - "POST /api/register HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:49632 - "POST /api/check-in HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:49636 - "POST /api/check-in HTTP/1.1" 400 Bad Request
INFO:     127.0.0.1:49646 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:49647 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:49649 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:49651 - "GET /api/attendance HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:49671 - "POST /api/check-out HTTP/1.1" 200 OK
Found 2 face(s) in image
INFO:     127.0.0.1:49675 - "POST /api/check-out HTTP/1.1" 400 Bad Request
INFO:     127.0.0.1:49680 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:49681 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:49685 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:49687 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:49692 - "GET /api/attendance/monthly-report?year=2025&month=12 HTTP/1.1" 200 OK
INFO:     127.0.0.1:50489 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:50491 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:50495 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:50497 - "GET /api/attendance HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:50503 - "POST /api/check-out HTTP/1.1" 200 OK
INFO:     127.0.0.1:50523 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:50525 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:50529 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:50531 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:50535 - "GET /api/attendance/monthly-report?year=2025&month=12 HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:51713 - "POST /api/register HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:51731 - "POST /api/check-in HTTP/1.1" 200 OK
INFO:     127.0.0.1:51743 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51744 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:51748 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51750 - "GET /api/attendance HTTP/1.1" 200 OK
Found 1 face(s) in image
INFO:     127.0.0.1:51767 - "POST /api/check-out HTTP/1.1" 200 OK
INFO:     127.0.0.1:51777 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51779 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:51784 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51786 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:51790 - "GET /api/attendance/monthly-report?year=2025&month=12 HTTP/1.1" 200 OK
Found 2 face(s) in image
INFO:     127.0.0.1:51830 - "POST /api/check-in HTTP/1.1" 200 OK
Found 2 face(s) in image
INFO:     127.0.0.1:51843 - "POST /api/check-in HTTP/1.1" 200 OK
INFO:     127.0.0.1:51865 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51866 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:51869 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:51872 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:52447 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:52449 - "GET /api/attendance HTTP/1.1" 200 OK
INFO:     127.0.0.1:52451 - "GET /api/users HTTP/1.1" 200 OK
INFO:     127.0.0.1:52453 - "GET /api/attendance HTTP/1.1" 200 OK
